<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2"
        android:background="@drawable/outer_line"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/customDisplay"
                android:text="@string/title" />

            <TextView
                style="@style/customDisplay"
                android:text="@string/first_name" />

            <TextView
                style="@style/customDisplay"
                android:text="@string/last_name" />

            <TextView
                style="@style/customDisplay"
                android:text="@string/work_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:weightSum="3">

            <EditText
                style="@style/customEdit"
                android:hint="@string/sample_title" />

            <EditText
                style="@style/customEdit"
                android:hint="@string/sample_first_name" />


            <EditText
                style="@style/customEdit"
                android:hint="@string/sample_last_name" />

            <EditText
                style="@style/customEdit"
                android:hint="@string/sample_mail_id" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/extra_text"
                android:textSize="@dimen/extra_text_size"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>